test/fail/integration/_fail_sem_decl_value_2.hs
x, y :: Int
y = let x = 3 in 4
main = print "hello"